Bug 99918 - disk_cache.h:57:20: error: no member named 'st_mtim' in 'struct stat'
Summary: disk_cache.h:57:20: error: no member named 'st_mtim' in 'struct stat'
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Mac OS X (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2017-02-23 08:05 UTC by Vinson Lee
Modified: 2017-02-25 07:40 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-02-23 08:05:30 UTC
mesa: 6ca4347c827c9b4c577bc04587a5c0070f5b5339 (master 17.1.0-devel)

  CC       libmesautil_la-disk_cache.lo
In file included from disk_cache.c:46:
./disk_cache.h:57:20: error: no member named 'st_mtim' in 'struct stat'
   *timestamp = st.st_mtim.tv_sec;
                ~~ ^

commit 207e3a6e4b6d70a965f2852204c35ccf42fe3533
Author: Timothy Arceri <tarceri@itsqueeze.com>
Date:   Fri Feb 10 13:02:22 2017 +1100

    util/radv: move *_get_function_timestamp() to utils
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>
Comment 1 Ernst Sjöstrand 2017-02-23 08:08:22 UTC
Which compile options?
Comment 2 Vinson Lee 2017-02-23 08:16:39 UTC
(In reply to Ernst Sjöstrand from comment #1)
> Which compile options?

$ ./autogen.sh --disable-dri --disable-gbm --disable-egl --with-dri-drivers=swrast --with-gallium-drivers=swrast
Comment 3 Vinson Lee 2017-02-25 07:40:19 UTC
commit 30a4b25efe005c922f048beaf62852714d2462a1
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Thu Feb 23 13:48:34 2017 -0800

    util/disk_cache: Use backward compatible st_mtime.
    
    Fix Mac OS X build error.
    
      CC       libmesautil_la-disk_cache.lo
    In file included from disk_cache.c:46:
    ./disk_cache.h:57:20: error: no member named 'st_mtim' in 'struct stat'
       *timestamp = st.st_mtim.tv_sec;
                    ~~ ^
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=99918
    Fixes: 207e3a6e4b ("util/radv: move *_get_function_timestamp() to utils")
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>
    Reviewed-by: Timothy Arceri <tarceri@itsqueeze.com>
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.